--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <body>
         <table>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
             </tr>
         </table>
     </body>
@@ -22,7 +22,7 @@
     window.addEventListener('scroll', function() {
         const table = document.querySelector('table');
         const row = document.createElement('tr');
-        row.innerHTML = '<td></td><td></td><td></td><td></td><td></td><td></td><td></td>';
+        row.innerHTML = '<td>7</td><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td><td>13</td>';
         table.appendChild(row);
     });
 </script>
