After document ready

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
 </html>
 
 <script type="text/javascript">
-    // On scroll, add a table row
-    window.addEventListener('scroll', function() {
-        const table = document.querySelector('table');
-        const row = document.createElement('tr');
-        row.innerHTML = '<td>7</td><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td><td>13</td>';
-        table.appendChild(row);
+    // On scroll, add a table row - after document is ready
+    document.addEventListener('DOMContentLoaded', function() {
+        window.addEventListener('scroll', function() {
+            console.log('scroll');
+            const table = document.querySelector('table');
+            const row = document.createElement('tr');
+            row.innerHTML = '<td>7</td><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td><td>13</td>';
+            table.appendChild(row);
+        });
     });
 </script>
