--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Neverending Journey</title>
     </head>
-    <body>
+    <body style="height: 10000px;">
         <table>
             <tr>
                 <td>1</td>
