--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@
                 console.log('scroll');
                 const table = document.querySelector('table');
                 const row = document.createElement('tr');
-                row.innerHTML = '<td>' + rowNumbers.shift() + '</td><td>' + rowNumbers.shift() + '</td><td>' + rowNumbers.shift() + '</td><td>' + rowNumbers.shift() + '</td><td>' + rowNumbers.shift() + '</td><td>' + rowNumbers.shift() + '</td>';
+                
+                row.innerHTML = '<td>' + rowNumbers[0] + '</td><td>' + rowNumbers[1] + '</td><td>' + rowNumbers[2] + '</td><td>' + rowNumbers[3] + '</td><td>' + rowNumbers[4] + '</td><td>' + rowNumbers[5] + '</td>';
                 table.appendChild(row);
-                rowNumbers.push(rowNumbers.shift());
-                rowNumbers.push(rowNumbers.shift());
-                rowNumbers.push(rowNumbers.shift());
-                rowNumbers.push(rowNumbers.shift());
-                rowNumbers.push(rowNumbers.shift());
-                rowNumbers.push(rowNumbers.shift());
+                // Set rowNumbers to the next 6 numbers
+                rowNumbers = [rowNumbers[0] + 6, rowNumbers[1] + 6, rowNumbers[2] + 6, rowNumbers[3] + 6, rowNumbers[4] + 6, rowNumbers[5] + 6];
             }
         });
     });
