--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Neverending Journey</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body style="height: 10000px;">
         <table>
