--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Neverending Journey</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body style="height: 10000px;">
+    <body>
         <table>
             <tr>
                 <td>1</td>
