Updating scroll and images

--- a/index.html
+++ b/index.html
@@ -53,29 +53,32 @@
   document.addEventListener("DOMContentLoaded", function () {
     window.addEventListener("scroll", function () {
       scrollPosition = window.scrollY;
-      if (scrollPosition - furthestScroll >= 200) {
+      if (scrollPosition - furthestScroll >= 211) {
         furthestScroll = scrollPosition;
-        console.log("scroll");
-        const table = document.querySelector("table");
-        const row = document.createElement("tr");
+        let numberOfRows = (scrollPosition - furthestScroll) / 211;
+        for (let i = 0; i < numberOfRows; i++) {
+            console.log("scroll");
+            const table = document.querySelector("table");
+            const row = document.createElement("tr");
 
-        let images = [
-          rowCount % 2 === 0 ? "Image_Left-1.png" : "Image_Left-2.png",
-        ];
-        for (let i = 0; i < NUM_IMAGES_PER_ROW - 2; i++) {
-          images.push(`Image_R-${Math.floor(Math.random() * 8) + 1}`);
-        }
-        images.push(
-          rowCount % 2 === 0 ? "Image_Right-1.png" : "Image_Right-2.png"
-        );
+            let images = [
+            rowCount % 2 === 0 ? "Image_Left-1.png" : "Image_Left-2.png",
+            ];
+            for (let i = 0; i < NUM_IMAGES_PER_ROW - 2; i++) {
+            images.push(`Image_R-${Math.floor(Math.random() * 8) + 1}`);
+            }
+            images.push(
+            rowCount % 2 === 0 ? "Image_Right-1.png" : "Image_Right-2.png"
+            );
 
-        let innerHTML = "";
-        for (const image of images) {
-          innerHTML += '<td><img src="' + image + '" /></td>';
+            let innerHTML = "";
+            for (const image of images) {
+                innerHTML += '<td><img src="images/' + image + '" /></td>';
+            }
+            row.innerHTML = innerHTML;
+            table.appendChild(row);
+            rowCount++;
         }
-        row.innerHTML = innerHTML;
-        table.appendChild(row);
-        rowCount++;
       }
     });
   });
