--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             rowCount % 2 === 0 ? "Image_Left-1.png" : "Image_Left-2.png",
             ];
             for (let i = 0; i < NUM_IMAGES_PER_ROW - 2; i++) {
-            images.push(`Image_R-${Math.floor(Math.random() * 8) + 1}`);
+            images.push(`Image_R-${Math.floor(Math.random() * 8) + 1}.png`);
             }
             images.push(
             rowCount % 2 === 0 ? "Image_Right-1.png" : "Image_Right-2.png"
