--- a/index.html
+++ b/index.html
@@ -42,4 +42,4 @@
   </body>
 </html>
 
-<script type="text/javascript" src="script.js"></script></script>
+<script type="text/javascript" src="scripts.js"></script></script>
